# AI-Development-Ecosystem

./: .gitignore  MercuryDoc.txt  README.md  _manual_gemini_test.py  install.bat  install_dependencies.ps1  prompt.md  pyproject.toml  requirements.txt  resume.md  spec.yaml  test.yaml  test_mercury.py  test_python.py  ИНСТРУКЦИЯ_УСТАНОВКИ.md  РЕШЕНИЕ_ПРОБЛЕМЫ.md
.github/workflows/: ci.yaml
examples/: broken_analyzer.py  broken_analyzer_sample.txt
temir/: __init__.py  __main__.py  env_bootstrap.py  execution_contract.py  execution_guard.py  journal_cli.py  main.py  smoke_v1.py
temir/agents/: __init__.py  backend_coder_agent.py  base_agent.py  gemini_chain.py  gemini_enhancer_agent.py  supervisor_agent.py  system_architect_agent.py  tester_agent.py  universal_agent.py
temir/config/: __init__.py
temir/core/: __init__.py  action_ir.py  action_preflight.py  capabilities.py  cost_calculator.py  execution_gate.py  execution_graph.py  execution_state_reducer.py  ir_schema.py  ir_v3.py  level_validation.py  models.py  orchestrator.py  patch_manager.py  platform_context.py  rate_limiter.py  retry_policy.py  snapshot_manager.py  spec_parser.py  step_audit.py  tool_registry.py
temir/llm/: __init__.py  kernel.py
temir/memory/: __init__.py  cache_manager.py  schema.sql  vector_cache_manager.py
temir/prompts/: full_system_smoke_v1.txt  prompts.yaml
temir/replay/: __init__.py  state_machine.py
temir/sandbox/: __init__.py  docker_manager.py  local_sandbox.py  validation.py
temir/storage/: __init__.py  event_journal.py  run_store.py
temir/tools/: __init__.py  agent_tools.py
temir/web/: __init__.py  app.py  event_envelope.py  event_schema.py  hub.py  pipeline_events.py  run_telemetry.py
temir/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_action_ir.py  test_action_preflight.py  test_agent_tools.py  test_auto_plan.py  test_cache_integration.py  test_capabilities.py  test_event_envelope.py  test_event_journal.py  test_event_schema.py  test_execution_graph.py  test_gemini_chain.py  test_ir_schema.py  test_ir_v3.py  test_ir_v4_dag_git.py  test_journal_cli.py  test_level2_closure.py  test_llm_kernel.py  test_offline_agent.py  test_orchestrator_pipeline.py  test_platform_context.py  test_results_snapshot.py  test_step_audit.py
